Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28177

MySQL 5.7.33 fails to install audit plugin for Mariadb-10.2.43 version on aarch64 platform

    XMLWordPrintable

Details

    Description

      On the aarch64 platform, MySQL 5.7.33 cannot install the audit plugin of Mariadb-10.2.43 version, but it can run normally on the X86_64 platform。

      The command to install the plugin is as follows:
      INSTALL PLUGIN server_audit SONAME 'server_audit.so';

      The MySQL crash log is as follows:
      12022-03-17T06:22: 28.079851Z 0 [Note] mysqld: ready for connections.
      Version: "5.7.33•
      socket:
      */var/lib/mysql/mysql.sock' port: 3306 MySQL Community Server (GPL)
      120322 36 72: *Absenter ouestona-hat Audit Plugin version 1.4. 3 STARTEO.
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
      Attempting to collect some information that could help diagnose the problem.
      As this is a crash and something is definitely wrong, the information
      collection process might fail.
      key_buffer _size=8388608
      read _buffer_size=131072
      max_used_connections=1
      max_threads=151
      thread_count=1
      connection_count-1
      It is possible that mysqld could use up to
      key buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 68205 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
      Thread pointer: Oxffff60000d40
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = ffffa412e950 thread_stack 0x40000
      mysqld(my_print_stacktrace+0x2c)[0xdbb8b4]
      mysqld(handle_fatal_signal+@x32c)[0x7938547
      linux-vdso.so.1(__kernel_rt_sigreturn+0x0)[Oxffffaf8908bc]
      /usr/lib/mysql/plugin/server_audit.so(get_db_mysql57+0x14)[Oxffffa40a794c]
      /usr/lib/mysql/plugin/server_audit.so(+0x7a38)[Oxffffa40a7a38]
      mysqld(_Z18mysql_audit_notifyP3THD30mysql_event_general_subclass_tPKciS3_m+0x204)[@x7949a4]
      mysqld(_Z16dispatch_commandP3THDPK8COM_DATA19enum_server_command+®x3f0)[0xbb9d40]
      mysqld(_Z10do_commandP3THD+0x1a8)[0xbbb7a8]
      mysqld(handle_connection+®x288)[0x66930]
      mysqld(pfs_spawn_thread+Oxf8)[0x10cf8a0]
      /lib64/libpthread.so.0(+0x88cc)[0xffffaf8388cc]
      Alib64/libc.so.6(+Oxdalec)[Oxffffaf0lalec]
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (ffff600058f0): INSTALL PLUGIN server_audit SONAME 'server_audit.so'
      Connection ID (thread ID): 2
      Status: NOT KILLED

      Attachments

        Activity

          People

            danblack Daniel Black
            hongdongjian hongdongjian
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: