MDEV-28177: server_audit; Update the offset of dbName on the aarch64 platform.

On the aarch64 platform, MySQL 5.7.33 cannot install this version of the audit
plugin, but X86_64 can run well。